# ConvTool

./: .gitignore  DESIGN.md  README.md  pyproject.toml
ConvTool/tooluse/: __init__.py  __main__.py  cli.py
ConvTool/tooluse/agents/: __init__.py  assistant_agent.py  orchestrator.py  params.py  planner_agent.py  sampler_agent.py  user_proxy.py  validator_agent.py
ConvTool/tooluse/dataset/: __init__.py  writer.py
ConvTool/tooluse/execution/: __init__.py  engine.py
ConvTool/tooluse/graph/: __init__.py  builder.py  patterns.py  sampler.py
ConvTool/tooluse/memory/: __init__.py  factory.py  in_memory.py  mem0_store.py  store.py
ConvTool/tooluse/metrics/: __init__.py  diversity.py
ConvTool/tooluse/registry/: __init__.py  loader.py  models.py
ConvTool/tooluse/sampler/: __init__.py  base.py
data/toolbench/tools/Entertainment/: chuck_norris_by_api_ninjas.json  deezer.json  epic_games_store.json  imdb_top_100_movies.json  love_calculator.json  netflix_original_series_top_100_ranked.json  steam.json
data/toolbench/tools/Finance/: alpha_vantage.json  coinranking.json  currency_conversion_and_exchange_rates.json  exchange_rate.json  real_time_finance_data.json  stock_analysis.json  twelve_data.json
data/toolbench/tools/Food/: bbc_good_food_api.json  edamam_nutrition_analysis.json  food_nutrition_information.json  keto_diet.json  pizza_and_desserts.json  the_cocktail_db.json
output/: registry.json  run_a.jsonl  run_b.jsonl
tests/e2e/: test_pipeline.py
tests/unit/: test_execution.py  test_memory.py  test_metrics.py  test_registry.py
(+22 files in other folders)
